I made all the links between the pages
Next step, is the CSS for each file

--- a/html/Page1/Page1.html
+++ b/html/Page1/Page1.html
@@ -5,9 +5,10 @@
     <title>Page1</title>
 </head>
 <body>
-<h1>First index page: Select another from the choices bellow</h1>
-<p>Page 5:<p>
-<p>Page 6:<p>
-<p>Page 7:<p>
+<h1>First index page(node 1): Select another from the choices bellow</h1>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page4\Page4.html">Page 4:Page4.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page5\Page5.html">Page 5:Page5.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page6\Page6.html">Page 6:Page6.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
