--- a/html/Page1/Page4/Page4.html
+++ b/html/Page1/Page4/Page4.html
@@ -7,7 +7,8 @@
 <body>
 <h1>Second index page: Select another from the choices bellow</h1>
 
-<p>Page 14:<p>
-<p>Page 15:<p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page4\Page14\Page14.html">Page 14:Page14.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page4\Page15\Page15.html">Page 15:Page14.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
