--- a/html/Page2/Page10/Page10.html
+++ b/html/Page2/Page10/Page10.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>Second index page: Select another from the choices bellow</h1>
-
-<p>Page 24:<p>
-<p>Page 25:<p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page2\Page10\Page24\Page24.html">Page 24:Page24.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page2\Page10\Page25\Page25.html">Page 25:Page25.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
