--- a/html/Page2/Page2.html
+++ b/html/Page2/Page2.html
@@ -5,10 +5,10 @@
     <title>Page2</title>
 </head>
 <body>
-<h1>Second index page: Select another from the choices bellow</h1>
-<p>Page 8:<p>
-<p>Page 9:<p>
-<p>Page 10:<p>
-
+<h1>First index page(node): Select another from the choices bellow</h1>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page1.html">Page8:Page8.HTML</a></p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page2\Page2.html">Page9:Page9.HTML</a></p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page3\Page3.html">Page10:Page10.HTML</a></p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
