--- a/html/Page2/Page8/Page8.html
+++ b/html/Page2/Page8/Page8.html
@@ -8,7 +8,8 @@
 <body>
 <h1>Second index page: Select another from the choices bellow</h1>
 
-<p>Page 20:<p>
-<p>Page 21:<p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page2\Page8\Page20\Page20.html">Page 20:Page20.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page2\Page8\Page21\Page21.html">Page 21:Page21.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
