--- a/html/Page3/Page11/Page11.html
+++ b/html/Page3/Page11/Page11.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Page11</title>
 </head>
-</head>
 <body>
 <h1>Second index page: Select another from the choices bellow</h1>
 
-<p>Page 26:<p>
-<p>Page 27:<p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page3\Page11\Page26\Page26.html">Page 26:Page26.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page3\Page11\Page27\Page27.html">Page 27:Page27.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
