--- a/html/Page3/Page13/Page13.html
+++ b/html/Page3/Page13/Page13.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Page13</title>
 </head>
-</head>
+
 <body>
 <h1>Second index page: Select another from the choices bellow</h1>
-
-<p>Page 30:<p>
-<p>Page 31:<p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page3\Page13\Page30\Page30.html">Page 30:Page30.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page3\Page13\Page31\Page31.html">Page 31:Page31.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
