--- a/html/Page3/Page3.html
+++ b/html/Page3/Page3.html
@@ -5,10 +5,11 @@
     <title>Page3</title>
 </head>
 <body>
-<h1>Third index page: Select another from the choices bellow</h1>
+<h1>First index page(node 3): Select another from the choices bellow</h1>
 
-<p>Page 11:<p>
-<p>Page 12:<p>
-<p>Page 13:<p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page4\Page4.html">Page 11:Page11.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page5\Page5.html">Page 12:Page12.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page6\Page6.html">Page 13:Page13.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
