--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,8 @@
 <body>
 
 <h1>Index page</h1>
-<p>Page1:Page1.HTML</a></p>
-<p>Page2:Page2.HTML</p>
-<p>Page3:Page3.HTML</p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page1.html">Page1:Page1.HTML</a></p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page2\Page2.html">Page2:Page2.HTML</a></p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page3\Page3.html">Page3:Page3.HTML</a></p>
 </body>
 </html>
