--- a/html/Page1/Page4/Page14/Page14.html
+++ b/html/Page1/Page4/Page14/Page14.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 <h1> End of the road buddy</h1>
-<p>You just touched the end of my three package dysplay!</p>
-<p>You can return to the index</p>
-<p>You can return to the previous page</p>
+<p>You just touched the end of my three package display!</p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
