--- a/html/Page1/Page4/Page15/Page15.html
+++ b/html/Page1/Page4/Page15/Page15.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Page15</title>
+  <title>15</title>
 </head>
 <body>
 <h1> End of the road buddy</h1>
-<p>You just touched the end of my three package dysplay!</p>
-<p>You can return to the index</p>
-<p>You can return to the previous page</p>
+<p>You just touched the end of my three package display!</p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
