--- a/html/Page1/Page6/Page6.html
+++ b/html/Page1/Page6/Page6.html
@@ -7,7 +7,8 @@
 <body>
 <h1>Second index page: Select another from the choices bellow</h1>
 
-<p>Page 18:<p>
-<p>Page 19:<p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page6\Page18\Page18.html">Page 18:Page18.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page6\Page19\Page19.html">Page 19:Page19.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
