--- a/html/Page2/Page9/Page9.html
+++ b/html/Page2/Page9/Page9.html
@@ -7,7 +7,8 @@
 <body>
 <h1>Second index page: Select another from the choices bellow</h1>
 
-<p>Page 21:<p>
-<p>Page 22:<p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page2\Page9\Page22\Page22.html">Page 22:Page22.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page2\Page9\Page23\Page23.html">Page 23:Page23.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
