--- a/html/Page3/Page11/Page26/Page26.html
+++ b/html/Page3/Page11/Page26/Page26.html
@@ -9,5 +9,6 @@
 <p>You just touched the end of my three package display!</p>
 <p>You can return to the index</p>
 <p>You can return to the previous page</p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
