--- a/html/Page3/Page12/Page12.html
+++ b/html/Page3/Page12/Page12.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <h1>Second index page: Select another from the choices bellow</h1>
-
-<p>Page 28:<p>
-<p>Page 29:<p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page3\Page11\Page28\Page28.html">Page 28:Page28.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page3\Page11\Page28\Page29.html">Page 29:Page29.html</a><p>
+<p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\index.html">Index</a></p>
 </body>
 </html>
