CSS added inside the HTML
One step further

--- a/html/501.html
+++ b/html/501.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+    <style>
+body {background-color: powderblue;}
+h1   {font-size: 30px;
+  background: -webkit-linear-gradient(#eee, #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;}
+p    {font-size: 30px;
+  background: -webkit-linear-gradient(#eee, #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;}
+</style>
+    <meta charset="UTF-8">
+    <title>Page1</title>
     <meta charset="UTF-8">
     <title>501 error</title>
 </head>
 <body>
 <h1> You found 501 error buddy</h1>
-<h2> Try again later</h2>
+<p> Try again later</p>
 </body>
 </html>
