--- a/html/Page3/Page13/Page13.html
+++ b/html/Page3/Page13/Page13.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+    <style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
     <meta charset="UTF-8">
-    <title>Page13</title>
+    <title>Page1</title>
 </head>
-
 <body>
 <h1>Second index page: Select another from the choices bellow</h1>
 <p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page3\Page13\Page30\Page30.html">Page 30:Page30.html</a><p>
