--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Index.html</title>
+    <style>
+body {background-color: powderblue;}
+h1   {font-size: 14px;
+  background: -webkit-linear-gradient(#eee, #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;}
+p    {font-size: 14px;
+  background: -webkit-linear-gradient(#eee, #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;}
+</style>
+    <meta charset="UTF-8">
+    <title>Page1</title>
+    <meta charset="UTF-8">
+    <title>501 error</title>
 </head>
-<body>
 
 <h1>Index page</h1>
 <p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page1.html">Page1:Page1.HTML</a></p>
