--- a/html/Page1/Page1.html
+++ b/html/Page1/Page1.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
+    <style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
     <meta charset="UTF-8">
     <title>Page1</title>
 </head>
