--- a/html/Page1/Page4/Page15/Page15.html
+++ b/html/Page1/Page4/Page15/Page15.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
+  <style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
   <meta charset="UTF-8">
-  <title>15</title>
+  <title>Page1</title>
 </head>
 <body>
 <h1> End of the road buddy</h1>
