--- a/html/Page1/Page5/Page5.html
+++ b/html/Page1/Page5/Page5.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
+    <style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
     <meta charset="UTF-8">
-    <title>Page4</title>
+    <title>Page1</title>
 </head>
-<body>
 <h1>Second index page: Select another from the choices bellow</h1>
 
 <p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page5\Page16\Page16.html">Page 16:Page16.html</a><p>
