--- a/html/Page1/Page6/Page6.html
+++ b/html/Page1/Page6/Page6.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
+  <style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
   <meta charset="UTF-8">
-  <title>Page6</title>
+  <title>Page1</title>
 </head>
 <body>
 <h1>Second index page: Select another from the choices bellow</h1>
