--- a/html/Page2/Page10/Page10.html
+++ b/html/Page2/Page10/Page10.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+    <style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
     <meta charset="UTF-8">
-    <title>Page10</title>
+    <title>Page1</title>
 </head>
-<body>
 <h1>Second index page: Select another from the choices bellow</h1>
 <p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page2\Page10\Page24\Page24.html">Page 24:Page24.html</a><p>
 <p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page2\Page10\Page25\Page25.html">Page 25:Page25.html</a><p>
