--- a/html/Page2/Page10/Page24/Page24.html
+++ b/html/Page2/Page10/Page24/Page24.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+  <style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
   <meta charset="UTF-8">
-  <title>Page24</title>
+  <title>Page1</title>
 </head>
 <body>
 <h1> End of the road buddy</h1>
