--- a/html/Page3/Page12/Page12.html
+++ b/html/Page3/Page12/Page12.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+    <style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
     <meta charset="UTF-8">
-    <title>Page12</title>
-</head>
+    <title>Page1</title>
 </head>
 <body>
 <h1>Second index page: Select another from the choices bellow</h1>
