--- a/html/Page3/Page3.html
+++ b/html/Page3/Page3.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+    <style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
     <meta charset="UTF-8">
-    <title>Page3</title>
+    <title>Page1</title>
 </head>
-<body>
 <h1>First index page(node 3): Select another from the choices bellow</h1>
-
 <p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page4\Page4.html">Page 11:Page11.html</a><p>
 <p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page5\Page5.html">Page 12:Page12.html</a><p>
 <p><a href="C:\Users\Darius\Desktop\ServerDon\src\main\java\com\example\serverdon\html\Page1\Page6\Page6.html">Page 13:Page13.html</a><p>
